2010-03-24  Jaroslav Hajek  <highegg@gmail.com>

	* variables.cc (Fmissing_function_hook): New pseudo-variable.
	(Vmissing_function_hook): New static var.
	(maybe_missing_function_hook): New function.
	* variables.h: Declare it.
	* pt-id.cc (tree_identifier::eval_undefined_error): Call it here.
	* oct-parse.yy (feval (const std::string&, ...)): Also here.

2010-03-23  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Frem, Fmod): New DEFUNs.
	(Ffmod): Remove. Make an alias of Frem.

2010-03-23  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (map_d_m, map_m_d, map_m_m, map_f_fm, map_fm_f, map_fm_fm,
	map_d_s, map_s_d, map_s_s): Remove.
	(Fatan2, Fhypot, Ffmod): Rewrite using binmap.

2010-03-21  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fcellfun): Fix the parsing of string
	function arguments.

2010-03-20  John W. Eaton  <jwe@octave.org>

	* lex.ll: Don't undefine GNULIB_NAMESPACE.  Define fprintf,
	fwrite, malloc, and realloc and GNULIB_NAMESPACE::fprintf, ...
	* oct-parse.yy: Likewise.  Always include cstdlib.

2010-03-16  John W. Eaton  <jwe@octave.org>

	* ls-oct-ascii.cc (save_ascii_data): Insert extra newline after
	data is written to file.  From Brett Stewart <btstewart@wisc.edu>.

2010-03-16  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.h (unary_mapper_t::umap_cbrt): New enum member.
	* ov.h (octave_value::cbrt): New forwarder method.
	* ov-scalar.cc (octave_scalar::map): Handle cbrt.
	* ov-float.cc (octave_float_scalar::map): Ditto.
	* ov-re-mat.cc (octave_matrix::map): Ditto.
	* ov-flt-re-mat.cc (octave_float_matrix::map): Ditto.
	* ov-re-sparse.cc (octave_sparse_matrix::map): Ditto.

2010-03-15  John W. Eaton  <jwe@octave.org>

	* oct-parse.yy, lex.ll: Undefine GNULIB_NAMESPACE immediately
	after including <config.h>.

	* toplev.cc (wait_for_input): Tag call to select with gnulib::.

	* sighandlers.h (BLOCK_SIGNAL): Tag calls to sigemptyset,
	sigaddset, and sigprocmask with gnulib::.